# JobMeet

./: pyproject.toml  requirements.txt
backend/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  lucide-react.js
frontend/src/components/: GoogleLoginButton.jsx  Navbar.jsx  ProtectedRoute.jsx  PublicRoute.jsx
frontend/src/components/ui/: button.jsx  spinner.jsx
frontend/src/contexts/: AuthContext.jsx  LoadingContext.jsx  ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  PasswordReset.jsx  PasswordResetConfirm.jsx  Settings.jsx  Signup.jsx
frontend/src/services/: api.js  authService.js
