[project]
name = "jobmeet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=3.1.12",
    "django-cors-headers>=3.11.0",
    "djangorestframework>=3.15.1",
    "djangorestframework-simplejwt>=5.2.2",
    "djongo>=1.3.7",
    "dotenv>=0.9.9",
    "pymongo[srv]>=3.11.4",
]
